[Chromium] Fixed layout mode tests break subsequent tests https://bugs.webkit.org/show_bug.cgi?id=68923

Reviewed by Adam Barth.

Reset fixed layout mode between tests, so that tests that run after
platform/chromium/fast/repaint/fixed-layout-360x240.html still have the
regular 800x600 non-fixed layout.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::resetTestController):

Canonical link: https://commits.webkit.org/84916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96147 268f45cc-cd09-0410-ab3c-d52691b4dbfc